--- a/index.html
+++ b/index.html
@@ -263,9 +263,9 @@
           </h2>
         </blockquote> -->        
         <p>
-          Soy un desarrollador web full stack de Colombia entregando soluciones usando HTML, CSS, JavaScript, Node.js, Nestjs, Angular, SQL server, SQL. Soy una
+          Soy un desarrollador web full stack de Colombia, entregando soluciones usando HTML, CSS, JavaScript, Node.js, Nestjs, Angular, SQL server, SQL. Soy una
           persona proactiva, dinámica y responsable, me gusta trabajar en equipo y considero muy importante hacer el mejor proyecto, soy seguidor de las 
-          uenas prácticas y metodologías ágiles, así como un buen estudiante autodidacta y con muchas ganas de aprender y formarse en cualquier tecnología 
+          buenas prácticas y metodologías ágiles, así como un buen autodidacta y con muchas ganas de aprender y formarse en cualquier tecnología 
           que pueda ayudarme a ser un mejor desarrollador.
         </p>
         <p>
