--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
               <h5 style="color:#fff">Un <span class="typing" style="font-weight: 300; color:#004d40"></span></h5>
               <!-- <h5 style="color:#00796b">A <span class="typing" style="font-weight: 300; color:#fff"></span></h5> -->
               <h5>
-                Autodidacta, rápido aprendizaje, programador apasionado con una mente curiosa que disfruta resolviendo problemas complejos y desafiantes del mundo 
+                Autodidacta, de rápido aprendizaje, programador apasionado con una mente curiosa que disfruta resolviendo problemas complejos y desafiantes del mundo 
                 real.
               </h5>
             </div>
@@ -419,7 +419,7 @@
             <div class="role brown-text text-darken-2"></div>
             <ul>
               <li> Preparar un conjunto de datos apropiados para aplicar las diferentes técnicas de la minería de datos.</li>
-              <li> Proponer un modelo descriptivo para la visualización de los datos.  </ul>
+              <li> Proponer un modelo descriptivo para la visualización de los datos.  </li>
               <li> Aplicar técnicas para predecir patrones ocultos.</li>
                 <b>Tools:</b> Python, Jupyter, Power Bi, 
               </li>
