--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
               <!-- <div class="col s12 m10"> -->
               <div class="col s12 m10">
                 <p>
-                  <span class="card-title"><a href="https://www.zhiffy.com/" target="_blank"
+                  <span class="card-title"><a href="https://github.com/DeibyPeralta/grado" target="_blank"
                       class="teal-text hoverline">SantaCruz del Valle Servicios</a></span>
                 </p>
               </div>
@@ -378,7 +378,7 @@
               <!-- <div class="col s12 m10"> -->
               <div class="col s12 m10">
                 <p>
-                  <span class="card-title"><a href="#experience" class="teal-text hoverline"> Vallenapp</a></span>
+                  <span class="card-title"><a href="https://github.com/DeibyPeralta/Proyecto" class="teal-text hoverline"> Vallenapp</a></span>
                 </p>
               </div>
             </div>
@@ -411,7 +411,7 @@
               </div>
               <div class="col s12 m10">
                 <p>
-                  <span class="card-title"><a href="https://www.cignex.com" target="_blank"
+                  <span class="card-title"><a href="" target="_blank"
                       class="teal-text">Predicción de homicidios de transito en Colombia del año 2019</a></span>
                 </p>
               </div>
