--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@
                 </p>
                 <p class="brown-text">Valledupar, Cesar</p>
                 <p>
-                  <b>Degree: </b>Systems Engineer  
+                  <b>Título: </b>Ingeniero de sistemas  
                   <br>
                 </p>
 
@@ -565,7 +565,7 @@
                 </p>
                 <p class="brown-text">Valledupar, Cesar</p>
                 <p>
-                  <b>Degree: </b>Aplicación de calidad del software en el proceso de desarrollo      
+                  <b>Título: </b>Aplicación de calidad del software en el proceso de desarrollo      
                   <br>
                 </p>
 
@@ -581,7 +581,7 @@
                 </p>
                 <p class="brown-text">Valledupar, Cesar</p>
                 <p>
-                  <b>Degree: </b>Auditoria interna de calidad - NTC ISO 9001      
+                  <b>Título: </b>Auditoria interna de calidad - NTC ISO 9001      
                   <br>
                 </p>
 
