--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         <!-- <a aria-label="Open Varad's resume in a new tab" href="#resume" target="_blank"
           onclick="window.open('https://drive.google.com/file/d/1vYi-bMyIsZPve0x_clxY8xsDtiHiOMd3/view?usp=sharing')"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a> -->
-        <a aria-label="Open Varad's resume in a new tab" href="https://drive.google.com/file/d/1IP59uJMHd9R_IHgM-GSoZk2BQmxS6H5z/view?usp=sharing" target="_blank"
+        <a aria-label="Open Varad's resume in a new tab" href="https://drive.google.com/file/d/1jZO4BFnIXNLKIqYtsFJeLn_9qMglXwSK/view?usp=drive_link" target="_blank"
         class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>  
       </li>
     </ul>
@@ -263,14 +263,14 @@
           </h2>
         </blockquote> -->        
         <p>
-          Soy un desarrollador web full stack de Colombia, entregando soluciones usando HTML, CSS, JavaScript, Node.js, Nestjs, Angular, SQL server, SQL. Soy una
+          Soy un desarrollador web full stack de Colombia, entregando soluciones usando HTML, CSS, JavaScript, Node.js, Angular, SQL server, SQL. Soy una
           persona proactiva, dinámica y responsable, me gusta trabajar en equipo y considero muy importante hacer el mejor proyecto, soy seguidor de las 
           buenas prácticas y metodologías ágiles, así como un buen autodidacta y con muchas ganas de aprender y formarse en cualquier tecnología 
           que pueda ayudarme a ser un mejor desarrollador.
         </p>
         <p>
           <ul>
-            <li><b>Languages:</b> Python, Java, JavaScript,  HTML5/CSS3, Bash</li>
+            <li><b>Languages:</b> Python, TypeScript, JavaScript,  HTML5/CSS3, Bash</li>
             <li><b>Databases:</b> MySQL, PostgreSQL, SQL server, SQLite</li>
             <li><b>Frameworks:</b> Angular, TypeScrip, Node.js, Bootstrap, Nestjs, Android Studio</li>
             <li><b>Tools & Technologies:</b> Git, Docker, AWS, Heroku, JIRA</li>
@@ -444,7 +444,7 @@
             <h4 class="brown-text light">Languages and Databases</h4>
             <div class="row text-center">
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/python-logo-1-300x300.jpg" class="responsive-img" />Python
+                <img alt="" src="/assets/img/typescript.png" class="responsive-img" />Typescript
               </div>
               <div class="col s4 m2">
                 <img alt="" src="/assets/img/html5-300x300.jpg" class="responsive-img" />HTML5
@@ -526,6 +526,9 @@
                 <img alt="" src="/assets/img/github.png" class="responsive-img" />GitHub
               </div>
               <div class="col s4 m2">
+                <img alt="" width="150" height="240" src="/assets/img/parrot.png" class="responsive-img" />Parrot
+              </div>
+              <div class="col s4 m2">
                 <img alt="" src="/assets/img/heroku.png" class="responsive-img" />Heroku
               </div>
             </div>
@@ -565,7 +568,7 @@
                 </p>
                 <p class="brown-text">Valledupar, Cesar</p>
                 <p>
-                  <b>Título: </b>Aplicación de calidad del software en el proceso de desarrollo      
+                  <b>Título: </b>Auditoria interna de calidad - NTC ISO 9001      
                   <br>
                 </p>
 
@@ -581,13 +584,13 @@
                 </p>
                 <p class="brown-text">Valledupar, Cesar</p>
                 <p>
-                  <b>Título: </b>Auditoria interna de calidad - NTC ISO 9001      
+                  <b>Título: </b>Aplicación de calidad del software en el proceso de desarrollo      
                   <br>
                 </p>
 
                 <ul>  
               </div>
-            </div>     
+            </div>              
           </div>          
         </div>
       </div>
