--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
               <h5 style="color:#fff">Un <span class="typing" style="font-weight: 300; color:#004d40"></span></h5>
               <!-- <h5 style="color:#00796b">A <span class="typing" style="font-weight: 300; color:#fff"></span></h5> -->
               <h5>
-                Autodidacta, de rápido aprendizaje, programador apasionado con una mente curiosa que disfruta resolviendo problemas complejos y desafiantes del mundo
+                Autodidacta, Pentester jr de rápido aprendizaje, desarrollador apasionado con una mente curiosa que disfruta resolviendo problemas complejos y desafiantes del mundo
                 real.
               </h5>
             </div>
@@ -263,17 +263,20 @@
           </h2>
         </blockquote> -->
         <p>
-          Soy un desarrollador web full stack de Colombia, entregando soluciones usando HTML, CSS, JavaScript, Node.js, Angular, SQL server, SQL. Soy una
-          persona proactiva, dinámica y responsable, me gusta trabajar en equipo y considero muy importante hacer el mejor proyecto, soy seguidor de las
-          buenas prácticas y metodologías ágiles, así como un buen autodidacta y con muchas ganas de aprender y formarse en cualquier tecnología
-          que pueda ayudarme a ser un mejor desarrollador.
+          Ingeniero de sistemas con experiencia en ciberseguridad, desarrollo de
+software y administración de infraestructuras tecnológicas. Sólidos
+conocimientos en detección de vulnerabilidades, auditorías de seguridad
+y herramientas como Nessus, Nmap y OWASP. Conocimiento en scripting
+con Python, Bash y PowerShell, así como en la implementación de
+soluciones para optimizar infraestructura y seguridad tecnológica.
         </p>
         <p>
           <ul>
-            <li><b>Languages:</b> Python, TypeScript, JavaScript,  HTML5/CSS3, Bash</li>
-            <li><b>Databases:</b> MySQL, PostgreSQL, SQL server, SQLite</li>
-            <li><b>Frameworks:</b> Angular, TypeScrip, Node.js, Bootstrap, Nestjs, Android Studio</li>
-            <li><b>Tools & Technologies:</b> Git, Docker, AWS, Heroku, JIRA</li>
+            <li><b>Languages:</b> Python, TypeScript, JavaScript, Python, Bash Scripting</li>
+            <li><b>Databases:</b> MySQL, PostgreSQL, SQL server</li>
+            <li><b>Frameworks:</b> Angular, TypeScrip, Node.js, Angular Material, Nestjs, Android Studio</li>
+              <li><b>OS & Servers:</b> Kali linux, Parrot Security, Ubuntu Server</li>
+            <li><b>Tools & Technologies:</b> Git, Docker, AWS, JIRA</li>
           </ul>
 
         </p>
@@ -326,7 +329,7 @@ mitigar riesgos en la infraestructura tecnológica.
               <li>Desarrollé soluciones en el backend utilizando Node.js,
 TypeScript, SQL Server para la creación de APIS.
               </li>
-               <li>DImplemente herramientas de virtualización para optimizar los
+               <li>Implemente herramientas de virtualización para optimizar los
 recursos en la infraestructura
 
               </li>
@@ -361,15 +364,16 @@ recursos en la infraestructura
                 Servicios” en la ciudad de Valledupar.
               </li>
               <li>
-                se desarrollo los módulos de: <b>reserva habitaciones</b>, <b>módulo de check-in</b> y <b>check-out</b>,
-                <b>gestión de nómina</b>, <b>gestión de vehículos (ingreso, lavado, parqueo, desinfección)</b>.
+                Gestión de la infraestructura tecnológica, incluyendo la
+configuración y monitoreo de firewalls y redes seguras.
               </li>
               <li>
-                Tambien, desarrollo una aplicación móvil para la gestión de reservas de los servicios
-                prestados en la empresa “Santa Cruz servicios”
+                Configuración y monitoreo de firewalls, redes de
+comunicación y servidores para garantizar la seguridad y
+continuidad del servicio.
               </li>
-              <li>Mejora del tiempo de respuesta en un 20% mediante la implementación del sistema web y cambio
-                del diseño de la base de datos.
+              <li>Desarrollé sistemas personalizados que optimizaron los flujos
+de trabajo de la empresa utilizando Node.js y Angular.
               </li>
                 <b>Tools:</b> Node.js, NestJS, TypeScript, AngularJS, MySQL, Android Studio
               </li>
@@ -501,7 +505,7 @@ recursos en la infraestructura
                 <img alt="" src="/assets/img/nestjs.png" class="responsive-img" />NEST js
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/bootstrap.png" class="responsive-img" />bootstrap 5
+                <img alt="" src="/assets/img/bootstrap.png" class="responsive-img" />Angular material
               </div>
             </div>
           </div>
